@@ -2,6 +2,7 @@ package com.epam.aidial.deployment.manager.dao.repository;
 
 import com.epam.aidial.deployment.manager.dao.entity.DomainWhitelistEntity;
 import com.epam.aidial.deployment.manager.dao.jpa.DomainWhitelistJpaRepository;
+import com.epam.aidial.deployment.manager.exception.GlobalDomainWhitelistNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Repository;
@@ -26,14 +27,30 @@ public class GlobalDomainWhitelistRepository {
         return updatedWhitelist.getAllowedDomains();
     }
 
+    public void setAllowedDomainsOrCreate(List<String> allowedDomains) {
+        var entities = jpaRepository.findAll();
+        DomainWhitelistEntity whitelist;
+        if (CollectionUtils.isEmpty(entities)) {
+            whitelist = new DomainWhitelistEntity();
+            whitelist.setAllowedDomains(allowedDomains);
+        } else {
+            if (entities.size() > 1) {
+                throw new IllegalStateException("More than 1 global domain whitelist found");
+            }
+            whitelist = entities.getFirst();
+            whitelist.setAllowedDomains(allowedDomains);
+        }
+        jpaRepository.saveAndFlush(whitelist);
+    }
+
     private DomainWhitelistEntity getGlobalDomainWhitelist() {
         var entities = jpaRepository.findAll();
         if (CollectionUtils.isEmpty(entities)) {
-            throw new IllegalStateException("Global domain whitelist not found");
+            throw new GlobalDomainWhitelistNotFoundException();
         }
         if (entities.size() > 1) {
             throw new IllegalStateException("More than 1 global domain whitelist found");
         }
-        return entities.get(0);
+        return entities.getFirst();
     }
 }
